update AUTHORS and INSTALL files

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,2 @@
-Alexandros Stergiakis <sterg at kth dot se>
-
-revived by
-
-Massimo Manghi <massimo.manghi@rivetweb.org>
+Originally written by Alexandros Stergiakis <sterg at kth dot se>
+Adopted by Massimo Manghi <massimo.manghi@rivetweb.org>
