--- a/ChangeLog
+++ b/ChangeLog
@@ -1,36 +1,40 @@
 14-05-2024 Massimo Manghi <mxmanghi@apache.org>
-    * unix/syslog.c: Using real LOG_* symbols in order to determine
-    facility and severity, Fixed typo in facility code
-    * VERSION: bumping version to 1.2.4
-    * pkgIndex.tcl: adding pkg index file
+	* unix/syslog.c: Using real libc LOG_* symbols in order to determine
+	facility and severity, Fixed typo in facility code. Add new
+	switch -pid to have process pid printed in log lines. Add support for
+	switch -perror which prints also to stderr. Arguments checking revised
+	* tests/test1.tcl: add new test lines, removed tests using switch
+	-severity (now unsupported) 
+	* VERSION: bumping version to 1.2.4
+	* pkgIndex.tcl: adding pkg index file
 
 28-04-2024 Massimo Manghi <mxmanghi@apache.org>
-    * unix/syslog.c: Add Tcl_IncrRefCount in convert_facility and 
-    convert_priority as Tcl objects are created and then passed
-    to Tcl_GetIndexFromObj that could well increment/decrement
-    the reference counter causing the release of the memory held
-    by them
+	* unix/syslog.c: Add Tcl_IncrRefCount in convert_facility and 
+	convert_priority as Tcl objects are created and then passed
+	to Tcl_GetIndexFromObj that could well increment/decrement
+	the reference counter causing the release of the memory held
+	by them
 
 20-04-2024 Massimo Manghi <mxmanghi@apache.org>
-    * VERSION: Add version file
-    * configure.ac: let's get the current version from VERSION
-    * unix/syslog.c: adopting Tcl_SetObjResult instead of Tcl_SetResult
+	* VERSION: Add version file
+	* configure.ac: let's get the current version from VERSION
+	* unix/syslog.c: adopting Tcl_SetObjResult instead of Tcl_SetResult
 
 31-03-2024 Massimo Manghi <massimo.manghi@rivetweb.org>
-    * README.md: basic information that are displayes on Github website
-    preparing to release this code as 1.2 even though there are no
-    new features, but to mark the fact it's a step forward
-    * NEWS: add news entry
-    * INSTALL: writing basic installation instructions
+	* README.md: basic information that are displayes on Github website
+	preparing to release this code as 1.2 even though there are no
+	new features, but to mark the fact it's a step forward
+	* NEWS: add news entry
+	* INSTALL: writing basic installation instructions
 	* -: Adopting tcl-syslog as the package needed
 	TEA build script updates while Alexander (the original author)
-    has become unresponsive at the 2008 email address. 
+	has become unresponsive at the 2008 email address. 
 
 1.1 20-4-2008 
- * Fixed a memory leak.
- * Some uninitialized variables fixed.
- * Locally used procedures are now static.
- * A forgotten debugging command cleaned-up.
+	* Fixed a memory leak.
+	* Some uninitialized variables fixed.
+	* Locally used procedures are now static.
+	* A forgotten debugging command cleaned-up.
 
 1.0 21-1-2008
- * Initial Version
+	* Initial Version
