remove syslog.h and params.h from TEA_ADD_HEADER, bumping version number to 2.0.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
+24-02-2026 Massimo Manghi <mxmanghi@apache.org>
+	* configure.ac: remove syslog.h and params.h from TEA_ADD_HEADER macro as this
+	causes potential conflicts with libc
+	* VERSION: bumping version number to 2.0.2
+
 21-02-2026 Massimo Manghi <mxmanghi@apache.org>
-    * tests/runtests.tcl: make script indipendent from the cwd
-    * Makefile.in: call runtests.tcl instead all.tcl (can be removed)
+	* tests/runtests.tcl: make script indipendent from the cwd
+	* Makefile.in: call runtests.tcl instead all.tcl (can be removed)
 	* doc/tcl-syslog.md: regenerated to have the correct package version displayed
 	* index.html: removing old HTML manual page
 	* VERSION: bumping to version 2.0.1 and re-release
