--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 24-02-2026 Massimo Manghi <mxmanghi@apache.org>
 	* configure.ac: remove syslog.h and params.h from TEA_ADD_HEADER macro as this
 	causes potential conflicts with libc
-	* VERSION: bumping version number to 2.0.2
+	* VERSION: re-release as 2.0.1
 
 21-02-2026 Massimo Manghi <mxmanghi@apache.org>
 	* tests/runtests.tcl: make script indipendent from the cwd
